@@ -32,8 +32,6 @@ public class PostService {
         return postRepo.findById(id).orElse(null);
     }
 
-
-
     public List<PostResponse> getMyPost() {
         User requestor = userService.getCurrentUser();
         List<Post> posts = postRepo.findByAuthor(requestor);
@@ -42,12 +40,8 @@ public class PostService {
 
     public List<PostResponse> getApprovalPostsByGroup(Long groupId, Long approvalStatus) {
         List<Post> posts = postRepo.findByApprovalStatusAndGroupId(groupId,approvalStatus);
-        return posts.stream()
-                .map(PostResponse::new)
-                .collect(Collectors.toList());
+        return posts.stream().map(PostResponse::new).toList();
     }
-
-
 
     public PostResponse createPost(PostCreateRequest request) {
         User currentUser = userService.getCurrentUser();
@@ -62,7 +56,6 @@ public class PostService {
                 .createdTime(LocalDateTime.now())
                 .approvalStatus(0L)
                 .build();
-
         post = postRepo.save(post);
         imageService.createForPost(post, request.getImageUrls());
         return new PostResponse(post);
@@ -73,27 +66,21 @@ public class PostService {
         if (existingPost == null) {
             throw new RuntimeException("Bài viết không tìm thấy");
         }
-
         existingPost.setContent(request.getContent());
-
         if (request.getStatus() != null) {
             existingPost.setStatus(request.getStatus());
         }
-
         postRepo.save(existingPost);
         imageService.updatePostImages(request.getImageUrls(), existingPost);
         return new PostResponse(existingPost);
     }
-
 
     public void deletePost(Long id) {
         postRepo.deleteById(id);
     }
     public List<PostResponse> getPostsByGroup(Long groupId) {
         return postRepo.findByGroupId(groupId)
-                .stream()
-                .map(PostResponse::new)
-                .collect(Collectors.toList());
+                .stream().map(PostResponse::new).toList();
     }
 
     public PostResponse updateApprovalStatus(Long postId) {
